--- a/lson/build.gradle
+++ b/lson/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
 }
 
 android {
@@ -7,7 +7,6 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.luoye.lson"
         minSdk 21
         targetSdk 33
         versionCode 1
